deploy/idp/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: idp
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: k8sgateway
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: management
      port: 9000
      targetPort: management
